[package]
name = "condenser"
version = "0.1.0"
authors = ["Arkan Emberwalker <arkan@drakon.io>"]

[dependencies]
rand = "0.3"
lazy_static = "0.2"
rocket = "0.2"
rocket_codegen = "0.2"
rocket_contrib = "0.2"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
redis = "0.8"
chrono = { version = "0.3", features = ["serde"] }
